# tplr

./: .gitignore  README.md  baseline.py  pyproject.toml  run.py  start.sh  test.ipynb  test_auto.py
neurons/: miner.py
src/tplr/: __init__.py  comms.py  compress.py  dataset.py  logging.py  update.py
wandb/: settings
